fixed alignment of toggle

--- a/frontend/src/app/tag-search/tag-search.component.css
+++ b/frontend/src/app/tag-search/tag-search.component.css
@@ -15,5 +15,5 @@ mat-form-field {
 }
 .view-buttons{
     position: absolute;
-    right: 4%;
+    right: 5%;
 }
